mostra os dados na tabela apos inserir

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,11 +1,11 @@
 FROM php:7.3-apache
-RUN apt-get update && \
-    apt-get install -y wget gnupg2 libpq5=11.1-2 libpq-dev=11.1-2 && docker-php-ext-install pdo pdo_pgsql
-RUN echo "deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main 9.6" > /etc/apt/sources.list.d/pgdg.list
-RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | \
-   apt-key add -
-RUN apt-get update
-RUN apt-get install -y postgresql-client-9.6
-COPY ./wait-for-postgres.sh wait-for-postgres.sh
-RUN chmod +x wait-for-postgres.sh 
+RUN apt update && \
+    apt install -y wget gnupg2 libpq5 libpq-dev && docker-php-ext-install pdo pdo_pgsql
+# RUN curl https://www.pgadmin.org/static/packages_pgadmin_org.pub | apt-key add
+# RUN echo "deb https://ftp.postgresql.org/pub/pgadmin/pgadmin4/apt/bionic pgadmin4 main" > /etc/apt/sources.list.d/pgadmin4.list && apt update
+# RUN apt update
+# RUN apt-get install -y pgadmin4
+# COPY ./wait-for-postgres.sh wait-for-postgres.sh
+# RUN chmod +x wait-for-postgres.sh 
+RUN apt search php | grep pgsql
 COPY src/ /var/www/html
